--- a/bjork.html
+++ b/bjork.html
@@ -27,7 +27,7 @@
 
 
     <footer>
-        <p>© 2025, Martina Malchevski | cátedra Wischñevsky</p>
+        <p>© 2025, Martina Malchevski | Cátedra Wischñevsky</p>
         <ul class="links">
             <a href="https://www.instagram.com/malchevskiii"><img src="img/instagram.svg" alt="instagram"></a>
             <a href="mailto:malchevskiii@gmail.com"><img src="img/mail.svg" alt="mail"></a>
