--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,14 @@
 
         <section id="galeria">
             <div class="container">
-                <div class="box box-1" style="--img: url(img/portfolio/1.jpg);" data-text="Bjork"></div>
-                <div class="box box-2" style="--img: url(img/portfolio/2.jpg);" data-text="Calendario 2025"></div>
-                <div class="box box-3" style="--img: url(img/portfolio/3.jpg);" data-text="Slow Brewing"></div>
-                <div class="box box-4" style="--img: url(img/portfolio/4.jpg);" data-text="CW Seguros"></div>
-                <div class="box box-5" style="--img: url(img/portfolio/5.jpg);" data-text="Bizarre Festival"></div>
+                <a href="bjork.html" class="box box-1" style="--img: url(img/portfolio/1.jpg);" data-text="Bjork's Post!"></a>
+                <a href="calendario.html" class="box box-2" style="--img: url(img/portfolio/2.jpg);"
+                    data-text="Calendario 2025"></a>
+                <a href="slowbrewing.html" class="box box-3" style="--img: url(img/portfolio/3.jpg);"
+                    data-text="Slow Brewing"></a>
+                <a href="cw.html" class="box box-4" style="--img: url(img/portfolio/4.jpg);" data-text="CW Seguros"></a>
+                <a href="bizarre.html" class="box box-5" style="--img: url(img/portfolio/5.jpg);"
+                    data-text="Bizarre Festival"></a>
             </div>
         </section>
 
