--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Martina Malchevski ˚ʚ♡ɞ˚</title>
     <link href="estilos.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="icon" href="img/favicon.svg" type="image/x-icon">
 
 </head>
 
@@ -35,14 +35,15 @@
 
         <section id="galeria">
             <div class="container">
-                <a href="bjork.html" class="box box-1" style="--img: url(img/portfolio/1.jpg);" data-text="Bjork's Post!"></a>
+                <a href="bjork.html" class="box box-1" style="--img: url(img/portfolio/1.jpg);"
+                    data-text="Bjork's Post!"></a>
                 <a href="calendario.html" class="box box-2" style="--img: url(img/portfolio/2.jpg);"
                     data-text="Calendario 2025"></a>
-                <a href="slowbrewing.html" class="box box-3" style="--img: url(img/portfolio/3.jpg);"
+                <a href="slow.html" class="box box-3" style="--img: url(img/portfolio/3.jpg);"
                     data-text="Slow Brewing"></a>
-                <a href="cw.html" class="box box-4" style="--img: url(img/portfolio/4.jpg);" data-text="CW Seguros"></a>
-                <a href="bizarre.html" class="box box-5" style="--img: url(img/portfolio/5.jpg);"
-                    data-text="Bizarre Festival"></a>
+                <a href="bizarre.html" class="box box-4" style="--img: url(img/portfolio/4.jpg);" data-text="Bizarre 1999"></a>
+                <a href="tool.html" class="box box-5" style="--img: url(img/portfolio/5.jpg);"
+                    data-text="TOOL Setlist"></a>
             </div>
         </section>
 
