--- a/bjork.html
+++ b/bjork.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Martina Malchevski ˚ʚ♡ɞ˚</title>
+    <title>Bjork's Post!</title>
     <link href="estilos.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="icon" href="img/favicon.svg" type="image/x-icon">
 
 </head>
 
@@ -15,14 +15,25 @@
         <a href="index.html"><div class="icono"></div></a>
         <nav class="menu">
             <a href="portfolio.html">Portfolio</a>
-            <a href="#">Sobre Mi</a>
-            <a href="#">Contacto</a>
+            <a href="sobre_mi.html">Sobre Mi</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
     </header>
 
     <main>
-        
-
+        <section id="gal_ind">
+            <div class="titulo_ind">
+                <h3>Bjork's Post! Tour</h3>
+                <h4>(2023)</h4>
+            </div>
+            <div class="cont_ind">
+                <div href="bjork.html" class="ind ind-1" style="--img: url(img/bjork/1.jpg);"></div>
+                <div href="calendario.html" class="ind ind-2" style="--img: url(img/bjork/2.jpg);"></div>
+                <div href="slow.html" class="ind ind-3" style="--img: url(img/bjork/3.jpg);"></div>
+                <div href="cw.html" class="ind ind-4" style="--img: url(img/bjork/4.jpg);"></div>
+                <div href="bizarre.html" class="ind ind-5" style="--img: url(img/bjork/5.jpg);"></div>
+            </div>
+        </section>
     </main>
 
 
