--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Martina Malchevski ˚ʚ♡ɞ˚</title>
     <link href="estilos.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="icon" href="img/favicon.svg" type="image/x-icon">
 
 </head>
 
