--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Martina Malchevski ˚ʚ♡ɞ˚</title>
+    <title>Sobre mi</title>
     <link href="estilos.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="icon" href="img/favicon.svg" type="image/x-icon">
 
 </head>
 
