--- a/bizarre.html
+++ b/bizarre.html
@@ -6,8 +6,9 @@
     <title>Bizarre 1999</title>
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/favicon.svg" type="image/x-icon">
-
 </head>
+
+<!----PRUEBA :((----->
 
 <body>
 
