Cambios galeria, sobre mi, css

--- a/index.html
+++ b/index.html
@@ -13,27 +13,18 @@
 
 <body>
 
-    <header>
-        
-    </header>
-
     <main>
-        <div id="titulo-inicio">
-            <section class="texto-inicio">
+        <section id="titulo-inicio">
+            <article class="texto-inicio">
                 <h1>Martina Malchevski</h1>
                 <h2>Portfolio 2025</h2>
-            </section>
-            <section class="boton">
+            </article>
+            <div class="boton">
                 <a href="portfolio.html">Ingresar</a>
-            </section>
-        </div>
+            </div>
+        </section>
 
     </main>
-
-
-    <footer>
-
-    </footer>
 
 </body>
 
