--- a/portfolio.html
+++ b/portfolio.html
@@ -8,15 +8,9 @@
     <link rel="icon" href="img/favicon.svg" type="image/x-icon">
 
 </head>
-
-<!----PRUEBA :((----->
-
 <body>
 
     <header>
-        <a href="index.html">
-            <div class="icono"></div>
-        </a>
         <nav class="menu">
             <a href="portfolio.html">Portfolio</a>
             <a href="sobre_mi.html">Sobre Mi</a>
@@ -25,17 +19,7 @@
     </header>
 
     <main>
-        <!-----
-        <section id="galeria">
-            <a href="bjork.html"><img src="img/portfolio/1.jpg" alt="galeria1" height=492px width=213px /></a>
-            <img src="img/portfolio/2.jpg" alt="galeria2" width="213px" height="492px" />
-            <img src="img/portfolio/3.jpg" alt="galeria3" width="213px" height="492px" />
-            <img src="img/portfolio/4.jpg" alt="galeria4" width="213px" height="492px" />
-            <img src="img/portfolio/5.jpg" alt="galeria5" width="213px" height="492px" />
-        </section>
-        ----PRUEBA GALERIA1-->
-
-        <section id="galeria">
+        <section>
             <div class="container">
                 <a href="bjork.html" class="box box-1" style="--img: url(img/portfolio/1.jpg);"
                     data-text="Bjork's Post!"></a>
@@ -48,7 +32,6 @@
                     data-text="TOOL Setlist"></a>
             </div>
         </section>
-
     </main>
 
 
@@ -60,7 +43,6 @@
             <a href="https://wa.me/1139382306"><img src="img/telefono.svg" alt="telefono"></a>
             <a href="https://www.behance.net/malchevskiii"><img src="img/behance.svg" alt="behance"></a>
         </ul>
-
     </footer>
 
 </body>
