--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -8,15 +8,9 @@
     <link rel="icon" href="img/favicon.svg" type="image/x-icon">
 
 </head>
-
-<!----PRUEBA :((----->
-
 <body>
 
     <header>
-        <a href="index.html">
-            <div class="icono"></div>
-        </a>
         <nav class="menu">
             <a href="portfolio.html">Portfolio</a>
             <a href="sobre_mi.html">Sobre Mi</a>
@@ -24,58 +18,49 @@
         </nav>
     </header>
 
-    <main>
+    <main class="contenedor_info">
         <section id="sobre-mi">
-            <img src="img/sobre_mi/sobre_mi.jpg" alt="sobre_mi_foto" width="" height="" />
-            <div id="texto-sobre-mi">
-            <p>Diseñadora gráfica con formación en comunicación visual y un interés especial en lo editorial y
-                experimental.
-                Me apasiona trabajar con tipografía, estructura y elementos analógicos.</p>
-            <div id="datos">
-                <ul class="columnas">
-                    <section id="columna1">
-                        <li><span>Nacimiento </span>18/06/2001</li>
-                        <li><span>Signo </span>Geminis :P</li>
-                    </section>
-                    <section id="columna1">
-                        <li><span>Teléfono </span>1139382306</li>
-                        <li><span>Número-fav </span>17</li>
-                    </section>
-                    <section id="columna1">
-                        <li><span>Localidad </span>Adrogué</li>
-                        <li><span>Edad </span>24 años</li>
-                    </section>
-                </ul>
-            </div>
-            </div>
+            <img src="img/sobre_mi/foto.png" alt="sobre_mi_foto" width="" height="px" />
+            <article id="texto-sobre-mi">
+                <h2>Sobre mi</h2>
+                <p>Diseñadora gráfica con formación en comunicación visual y un interés especial en lo editorial y experimental. 
+                    Me apasiona trabajar con tipografía, procesos y materiales analógicos, tratados digitalmente.</p>
+            </article>
+        </section>
+
+        <section id="experiencia">
+            <h2>Datos personales</h2>
+            <ul class="columnas">
+                <li><span>Nacimiento </span>18/06/2001</li>
+                <li><span>Signo </span>Geminis</li>
+                <li><span>Teléfono </span>1139382306</li>
+                <li><span>Localidad </span>Adrogué</li>
+                <li><span>Edad </span>24 años</li>
+            </ul>
         </section>
 
         <section id="experiencia">
             <h2>Experiencia</h2>
-            <div class="exp">
+            <div>
                 <ul class="columnas-exp">
                     <section class="columna2">
-                        <li><span>Mambo Clothing </span>Diseñadora gráfica<span>2021-2023</span></li>
-                        <li><span>CW Asesoras de Seguros </span>Diseñadora gráfica y Community Manager<span>2021-2023</span></li>
+                        <li><span>Mambo Clothing </span>Diseñadora gráfica (2019-2022)
+                        <li><span>CW Asesoras de Seguros </span>Diseñadora y Community Manager (2019-2022)
                     </section>
                     <section class="columna2">
-                        <li><span>Premoldeados de Lobos </span>Encargada y Diseñadora<span>2021-2023</span></li>
-                        <li><span>Freelancer </span>Diseñadora gráfica<span>2021-2023</span></li>
+                        <li><span>Premoldeados de Lobos </span>Encargada y Diseñadora (2019-2022)
+                        <li><span>Freelancer </span>Diseñadora gráfica (2019-2022)
                     </section>
                 </ul>
             </div>
         </section>
 
-        <section id="educacion">
+        <section id="experiencia">
             <h2>Educación</h2>
-            <div class="edu">
-                <ul class="columnas-edu">
-                    <section class="columna3">
-                        <li><span>Universidad Nacional de Lanus </span>Lic. en Diseño y Comunicación Visual<span>2019-Act.</span></li>
-                    </section>
-                    <section class="columna3">
-                        <li><span>Nuestra Señora de Luján </span>Bachillerato en economía<span>2012-2018</span></li>
-                    </section>
+            <div>
+                <ul class="columnas-exp">
+                    <li><span>Universidad Nacional de Lanus </span>Lic. en Diseño y Comunicación Visual (2019-2022)
+                    <li><span>Nuestra Señora de Luján </span>Bachillerato en economía (2019-2022)
                 </ul>
             </div>
         </section>
