--- a/bjork.html
+++ b/bjork.html
@@ -9,11 +9,7 @@
 </head>
 
 <body>
-
-<!----PRUEBA :((----->
-
     <header>
-        <a href="index.html"><div class="icono"></div></a>
         <nav class="menu">
             <a href="portfolio.html">Portfolio</a>
             <a href="sobre_mi.html">Sobre Mi</a>
@@ -22,11 +18,7 @@
     </header>
 
     <main>
-        <section id="gal_ind">
-            <div class="titulo_ind">
-                <h3>Bjork's Post! Tour</h3>
-                <h4>(2023)</h4>
-            </div>
+        <section>
             <div class="cont_ind">
                 <div href="bjork.html" class="ind ind-1" style="--img: url(img/bjork/1.jpg);"></div>
                 <div href="calendario.html" class="ind ind-2" style="--img: url(img/bjork/2.jpg);"></div>
@@ -36,7 +28,6 @@
             </div>
         </section>
     </main>
-
 
     <footer>
         <p>© 2025, Martina Malchevski | Cátedra Wischñevsky</p>
