--- a/calendario.html
+++ b/calendario.html
@@ -14,7 +14,9 @@
 <body>
 
     <header>
-        <a href="index.html"><div class="icono"></div></a>
+        <a href="index.html">
+            <div class="icono"></div>
+        </a>
         <nav class="menu">
             <a href="portfolio.html">Portfolio</a>
             <a href="sobre_mi.html">Sobre Mi</a>
