--- a/slow.html
+++ b/slow.html
@@ -8,30 +8,24 @@
     <link rel="icon" href="img/favicon.svg" type="image/x-icon">
 </head>
 
-<!----PRUEBA :((----->
-
 <body>
     <header>
-        <a href="index.html"><div class="icono"></div></a>
         <nav class="menu">
             <a href="portfolio.html">Portfolio</a>
             <a href="sobre_mi.html">Sobre Mi</a>
             <a href="contacto.html">Contacto</a>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </nav>
     </header>
 
     <main>
-        <section id="gal_ind">
-            <div class="titulo_ind">
-                <h3>Slow Brewing</h3>
-                <h4>(2023)</h4>
-            </div>
+        <section>
             <div class="cont_ind">
-                <div href="bjork.html" class="ind ind-1" style="--img: url(img/slow/1.jpg);"></div>
-                <div href="calendario.html" class="ind ind-2" style="--img: url(img/slow/2.jpg);"></div>
-                <div href="slow.html" class="ind ind-3" style="--img: url(img/slow/3.jpg);"></div>
-                <div href="cw.html" class="ind ind-4" style="--img: url(img/slow/4.jpg);"></div>
-                <div href="bizarre.html" class="ind ind-5" style="--img: url(img/slow/5.jpg);"></div>
+                <div class="ind ind-1" style="--img: url(img/slow/1.jpg);"></div>
+                <div class="ind ind-2" style="--img: url(img/slow/2.jpg);"></div>
+                <div class="ind ind-3" style="--img: url(img/slow/3.jpg);"></div>
+                <div class="ind ind-4" style="--img: url(img/slow/4.jpg);"></div>
+                <div class="ind ind-5" style="--img: url(img/slow/5.jpg);"></div>
             </div>
         </section>
     </main>
