--- a/calendario.html
+++ b/calendario.html
@@ -6,17 +6,11 @@
     <title>Calendario 2025</title>
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/favicon.svg" type="image/x-icon">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<!----PRUEBA :((----->
-
 <body>
-
     <header>
-        <a href="index.html">
-            <div class="icono"></div>
-        </a>
         <nav class="menu">
             <a href="portfolio.html">Portfolio</a>
             <a href="sobre_mi.html">Sobre Mi</a>
@@ -25,17 +19,13 @@
     </header>
 
     <main>
-        <section id="gal_ind">
-            <div class="titulo_ind">
-                <h3>Calendario 2025</h3>
-                <h4>(2024)</h4>
-            </div>
+        <section>
             <div class="cont_ind">
                 <div class="ind ind-1" style="--img: url(img/calendario/1.jpg);"></div>
-                <div href="calendario.html" class="ind ind-2" style="--img: url(img/calendario/2.jpg);"></div>
-                <div href="slow.html" class="ind ind-3" style="--img: url(img/calendario/3.jpg);"></div>
-                <div href="cw.html" class="ind ind-4" style="--img: url(img/calendario/5.gif);"></div>
-                <div href="bizarre.html" class="ind ind-5" style="--img: url(img/calendario/4.gif);"></div>
+                <div class="ind ind-2" style="--img: url(img/calendario/2.jpg);"></div>
+                <div class="ind ind-3" style="--img: url(img/calendario/3.jpg);"></div>
+                <div class="ind ind-4" style="--img: url(img/calendario/4.jpg);"></div>
+                <div class="ind ind-5" style="--img: url(img/calendario/5.gif);"></div>
             </div>
         </section>
     </main>
