--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <title>Martina Malchevski ˚ʚ♡ɞ˚</title>
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/favicon.svg" type="image/x-icon">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
