--- a/tool.html
+++ b/tool.html
@@ -6,15 +6,12 @@
     <title>Tool Setlist</title>
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/favicon.svg" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
-<!----PRUEBA :((----->
-
 <body>
-
     <header>
-        <a href="index.html"><div class="icono"></div></a>
         <nav class="menu">
             <a href="portfolio.html">Portfolio</a>
             <a href="sobre_mi.html">Sobre Mi</a>
@@ -23,17 +20,13 @@
     </header>
 
     <main>
-        <section id="gal_ind">
-            <div class="titulo_ind">
-                <h3>Tool Setlist</h3>
-                <h4>(2025)</h4>
-            </div>
+        <section>
             <div class="cont_ind">
-                <div href="bjork.html" class="ind ind-1" style="--img: url(img/tool/1.jpg);"></div>
-                <div href="calendario.html" class="ind ind-2" style="--img: url(img/tool/2.jpg);"></div>
-                <div href="slow.html" class="ind ind-3" style="--img: url(img/tool/3.jpg);"></div>
-                <div href="cw.html" class="ind ind-4" style="--img: url(img/tool/4.jpg);"></div>
-                <div href="bizarre.html" class="ind ind-5" style="--img: url(img/tool/5.jpg);"></div>
+                <div class="ind ind-1" style="--img: url(img/tool/1.jpg);"></div>
+                <div class="ind ind-2" style="--img: url(img/tool/2.jpg);"></div>
+                <div class="ind ind-3" style="--img: url(img/tool/3.jpg);"></div>
+                <div class="ind ind-4" style="--img: url(img/tool/4.jpg);"></div>
+                <div class="ind ind-5" style="--img: url(img/tool/5.jpg);"></div>
             </div>
         </section>
     </main>
